fixed directory name

--- a/scraping/reading_scraped_data.ipynb
+++ b/scraping/reading_scraped_data.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = 'scrapped_data/'\n",
+    "directory = 'scraped_data/'\n",
     "file = '20170101wellness20200701.json'"
    ]
   },
